--- a/css/doc.css
+++ b/css/doc.css
@@ -21,12 +21,23 @@ body {
 .content {
 	padding: 0 0.5em;
 }
+#content {
+	padding: 0 0.5em;
+}
 h1:not(#title) {
     border-bottom:2px solid;
     font-size:1.6em;
     font-weight:bold;
 	margin:2em 0px 0.5em 0px;
 
+}
+h1#postTitle {
+	margin-top: 70px;
+	margin-bottom: 10px;
+	border-bottom:2px solid;
+    font-size:1.6em;
+    font-weight:bold;
+    padding: 0 0.5em;
 }
 h2 {
     font-size:1.2em;
